thread fix when requesting best enemy